force-app/main/default/objects/User_Story_Work_Item_Link__c/User_Story_Work_Item_Link__c.object-meta.xml
<CustomObject>
    <label>User Story Work Item Link</label>
    <nameField>
        <displayFormat>USWI-{0000000}</displayFormat>
        <label>User Story Work Item Link Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Work Item Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>