force-app/main/default/objects/User_Story_Work_Item_Link__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Work Items</relationshipLabel>
    <relationshipName>User_Story_Work_Item_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>