force-app/main/default/objects/User_Story_Work_Item_Link__c/fields/User_Story_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Title__c</fullName>
    <formula>User_Story__r.User_Story_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Story Title</label>
    <type>Text</type>
</CustomField>