force-app/main/default/objects/User_Story_Work_Item_Link__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Story_Work_Item_Links</relationshipName>
    <type>Lookup</type>
</CustomField>