force-app/main/default/objects/User_Story_Work_Item_Link__c/fields/Work_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Status__c</fullName>
    <formula>TEXT( Work_Item__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Status</label>
    <type>Text</type>
</CustomField>