force-app/main/default/objects/User_Story_Work_Item_Link__c/fields/Work_Item_Subject__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Subject__c</fullName>
    <formula>HYPERLINK( Work_Item__c , Work_Item__r.Subject__c, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Item Subject</label>
    <type>Text</type>
</CustomField>